DT-865 some style changes to fix the spacing with the next section

--- a/src/client/components/homepage/happening-now.scss
+++ b/src/client/components/homepage/happening-now.scss
@@ -2,6 +2,7 @@
 
 .happeningNow {
     margin-top: 5vw;
+    margin-bottom: 11vw;
     padding-left: 0;
     padding-right: 0;
     width: 100%;
@@ -68,8 +69,8 @@
     font-weight: bold;
     font-size: 3.5vw;
     background-color: white;
-    padding-top: 15px;
-    padding-bottom: 30px;
+    margin-top: 4.2vw;
+    margin-bottom: 4.2vw;
     margin-left: 4.2%;
 }
 
